build.log
-- The C compiler identification is GNU 12.3.1
-- The CXX compiler identification is Clang 16.0.6
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/lib/llvm/16/bin/clang++-16 - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found Boost: /usr/lib64/cmake/Boost-1.82.0/BoostConfig.cmake (found suitable version "1.82.0", minimum required is "1.82.0") found components: system json 
-- Found PostgreSQL: /usr/lib64/libpq.so (found version "15.4")  
-- Found OpenSSL: /usr/lib64/libcrypto.so (found version "3.0.10")  
-- Configuring done (0.6s)
-- Generating done (0.0s)
-- Build files have been written to: /home/g-zu/projects/proofoffailure/build
[1/8] cd /home/g-zu/projects/proofoffailure/build && cppfront -a -fo -p /home/g-zu/projects/proofoffailure/public.pure.cpp2 -o /home/g-zu/projects/proofoffailure/public.pure.cpp
/home/g-zu/projects/proofoffailure/public.pure.cpp2... ok (all Cpp2, passes safety checks)

[2/8] cd /home/g-zu/projects/proofoffailure/build && cppfront -a -fo -p /home/g-zu/projects/proofoffailure/personal.pure.cpp2 -o /home/g-zu/projects/proofoffailure/personal.pure.cpp
/home/g-zu/projects/proofoffailure/personal.pure.cpp2... ok (all Cpp2, passes safety checks)

[3/8] "/usr/lib/llvm/16/bin/clang-scan-deps" -format=p1689 -- /usr/lib/llvm/16/bin/clang++-16 -DBOOST_CONTAINER_DYN_LINK -DBOOST_CONTAINER_NO_LIB -DBOOST_JSON_DYN_LINK -DBOOST_JSON_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DFMT_SHARED -I/home/g-zu/projects/cppfront/include -std=c++2b -x c++ /home/g-zu/projects/proofoffailure/public.pure.cpp -c -o CMakeFiles/pof.dir/public.pure.cpp.o -MT CMakeFiles/pof.dir/public.pure.cpp.o.ddi -MD -MF CMakeFiles/pof.dir/public.pure.cpp.o.ddi.d > CMakeFiles/pof.dir/public.pure.cpp.o.ddi
[4/8] "/usr/lib/llvm/16/bin/clang-scan-deps" -format=p1689 -- /usr/lib/llvm/16/bin/clang++-16 -DBOOST_CONTAINER_DYN_LINK -DBOOST_CONTAINER_NO_LIB -DBOOST_JSON_DYN_LINK -DBOOST_JSON_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DFMT_SHARED -I/home/g-zu/projects/cppfront/include -std=c++2b -x c++ /home/g-zu/projects/proofoffailure/personal.pure.cpp -c -o CMakeFiles/pof.dir/personal.pure.cpp.o -MT CMakeFiles/pof.dir/personal.pure.cpp.o.ddi -MD -MF CMakeFiles/pof.dir/personal.pure.cpp.o.ddi.d > CMakeFiles/pof.dir/personal.pure.cpp.o.ddi
[5/8] /usr/bin/cmake -E cmake_ninja_dyndep --tdi=CMakeFiles/pof.dir/CXXDependInfo.json --lang=CXX --modmapfmt=clang --dd=CMakeFiles/pof.dir/CXX.dd @CMakeFiles/pof.dir/CXX.dd.rsp
[6/8] /usr/lib/llvm/16/bin/clang++-16 -DBOOST_CONTAINER_DYN_LINK -DBOOST_CONTAINER_NO_LIB -DBOOST_JSON_DYN_LINK -DBOOST_JSON_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DFMT_SHARED -I/home/g-zu/projects/cppfront/include -std=c++2b -MD -MT CMakeFiles/pof.dir/personal.pure.cpp.o -MF CMakeFiles/pof.dir/personal.pure.cpp.o.d @CMakeFiles/pof.dir/personal.pure.cpp.o.modmap -o CMakeFiles/pof.dir/personal.pure.cpp.o -c /home/g-zu/projects/proofoffailure/personal.pure.cpp
[7/8] /usr/lib/llvm/16/bin/clang++-16 -DBOOST_CONTAINER_DYN_LINK -DBOOST_CONTAINER_NO_LIB -DBOOST_JSON_DYN_LINK -DBOOST_JSON_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DFMT_SHARED -I/home/g-zu/projects/cppfront/include -std=c++2b -MD -MT CMakeFiles/pof.dir/public.pure.cpp.o -MF CMakeFiles/pof.dir/public.pure.cpp.o.d @CMakeFiles/pof.dir/public.pure.cpp.o.modmap -o CMakeFiles/pof.dir/public.pure.cpp.o -c /home/g-zu/projects/proofoffailure/public.pure.cpp
FAILED: CMakeFiles/pof.dir/public.pure.cpp.o CMakeFiles/pof.dir/pof.pcm 
/usr/lib/llvm/16/bin/clang++-16 -DBOOST_CONTAINER_DYN_LINK -DBOOST_CONTAINER_NO_LIB -DBOOST_JSON_DYN_LINK -DBOOST_JSON_NO_LIB -DBOOST_SYSTEM_DYN_LINK -DBOOST_SYSTEM_NO_LIB -DFMT_SHARED -I/home/g-zu/projects/cppfront/include -std=c++2b -MD -MT CMakeFiles/pof.dir/public.pure.cpp.o -MF CMakeFiles/pof.dir/public.pure.cpp.o.d @CMakeFiles/pof.dir/public.pure.cpp.o.modmap -o CMakeFiles/pof.dir/public.pure.cpp.o -c /home/g-zu/projects/proofoffailure/public.pure.cpp
In module 'personal' imported from /home/g-zu/projects/proofoffailure/public.pure.cpp:9:
/home/g-zu/projects/cppfront/include/cpp2util.h:519:3: error: definition with same mangled name '_ZN4cpp26uniqueE' as another definition
} unique;
  ^
/home/g-zu/projects/cppfront/include/cpp2util.h:519:3: note: previous definition is here
} unique;
  ^
1 error generated.
ninja: build stopped: subcommand failed.
